--- a/package.json
+++ b/package.json
@@ -7,6 +7,14 @@
   "homepage": "https://github.com/jusbuc2k/knockroute",
   "private": false,
   "main": "dist/knockroute.js",
+  "files": [
+	"dist/knockroute*.js",
+	"dist/knockroute.d.ts"
+  ],
+  "dependencies": {
+	"knockout": "^3.0.0"
+  },
+  "typings": "dist/knockroute.d.ts",
   "repository": { 
       "type" : "git",
       "url" : "https://github.com/jusbuc2k/knockroute.git"
