--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.1",
+  "version": "1.0.2",
   "name": "knockroute",
   "license": "MIT",
   "author": "Justin R. Buchanan",
@@ -8,22 +8,23 @@
   "private": false,
   "main": "dist/knockroute.js",
   "files": [
-	"dist/knockroute*.js",
-	"dist/knockroute.d.ts"
+    "dist/knockroute*.js",
+    "dist/knockroute.d.ts"
   ],
   "dependencies": {
-	"knockout": "^3.0.0"
+    "knockout": "^3.0.0"
   },
   "typings": "dist/knockroute.d.ts",
-  "repository": { 
-      "type" : "git",
-      "url" : "https://github.com/jusbuc2k/knockroute.git"
-  }, 
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jusbuc2k/knockroute.git"
+  },
   "devDependencies": {
     "gulp": "^3.8.10",
-    "gulp-uglify": "^1.4.1",
     "gulp-concat": "^2.6.0",
     "gulp-header": "^1.7.1",
-    "gulp-rename": "^1.2.2"
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.4.1",
+    "http-server": "^0.9.0"
   }
 }
